[package]
name = "file-uploader-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.6"
aws-sdk-s3 = "1.51.0"
axum = { version = "0.7.5", features = ["multipart"] }
futures = "0.3.30"
hex = "0.4.3"
log = "0.4.22"
rust-s3 = "0.35.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.5.2", features = ["limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
